2000-04-19  Seth Alves  <alves@hungry.com>

	* gui/evolution-calendar-control.c (calendar_properties_init): create
	a property bag for this control
	(set_prop): callback for property sets
	(get_prop): callback for proprety gets

	* gui/calendar-commands.c (calendar_set_uri): new function,
	called when the "calendar_uri" property is set on the calendar-
	control's property bag.

2000-04-18  Federico Mena Quintero  <federico@helixcode.com>

	* cal-util/Makefile.am (INCLUDES): Fix include path.

2000-04-16  Federico Mena Quintero  <federico@helixcode.com>

	* pcs/cal-factory.h (CalFactoryClass): We have a new
	"last_calendar_gone" signal that Wombat can use to terminate
	itself properly.

	* pcs/cal-factory.c (cal_factory_class_init): Register the
	"last_calendar_gone" signal.
	(backend_destroy_cb): Emit the "last_calendar_gone" signal instead
	of killing the factory.

	* pcs/Makefile.am: Added $(CORBA_GENERATED) to BUILT_SOURCES.
	(INCLUDES): Make the log domain be "wombat-pcs".

2000-04-17  Seth Alves  <alves@hungry.com>

	* pcs/cal-backend.c (add_object): removed implicit save, since
	we don't want to save as we load from disk.
	(cal_backend_update_object): added a call to save, since it
	isn't done by add_object now.

2000-04-16  Federico Mena Quintero  <federico@helixcode.com>

	* cal-util/Makefile.am: Renamed library from libcalutil to
	libcal-util, to be consistent with libcal-client.  Install header
	files in $(includedir)/evolution/cal-util.
	(INCLUDES): Add "cal-util" log domain for glib.
	(libcal_clientincludedir): The header files are now installed in
	$(includedir)/evolution/cal-client.

	* cal-util/cal-util.h: Fix includes.

	* cal-client/client-test.c: Fix includes.

	* pcs/Makefile.am: Create libpcs.a, not a shared library, because
	it is for internal use by Wombat only.  The header files should
	not be installed, either.  Removed all the old Tlacuache stuff.

	* gui/Makefile.am (EXTRA_DIST): We no longer distribute
	gncal.desktop.